--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script type="riot/tag" src="tag/slide.tag.html"></script>
         <script type="riot/tag" src="tag/nav.tag.html"></script>
         <script type="riot/tag" src="tag/error.tag.html"></script>
+        <script type="riot/tag" src="tag/step.tag.html"></script>
         <script type="text/javascript" src="js/riot+compiler.min.js"></script>
         <script type="text/javascript" src="js/route.min.js"></script>
         <script type="text/javascript" src="js/slides.js"></script>
