add highlight js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <link type='image/x-icon' rel='shortcut icon' />
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/highlight/atom-one-dark-reasonable.css" />
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Droid+Sans|Yanone+Kaffeesatz" />
     </head>
     <body>
@@ -16,6 +17,7 @@
         <script type="riot/tag" src="tag/nav.tag.html"></script>
         <script type="riot/tag" src="tag/error.tag.html"></script>
         <script type="riot/tag" src="tag/step.tag.html"></script>
+        <script type="text/javascript" src="js/highlight.pack.js"></script>
         <script type="text/javascript" src="js/riot+compiler.min.js"></script>
         <script type="text/javascript" src="js/route.min.js"></script>
         <script type="text/javascript" src="js/slides.js"></script>
